Add fonts to repo

--- a/content/c3sr-intro.tex
+++ b/content/c3sr-intro.tex
@@ -63,7 +63,7 @@
     The CSR format serves as a starting point for the C3SR sparse matrix storage format for sparse banded matrices which
     is the focal point of this work.
 
-  \section{Sparse Banded Matrices Derived from Structured Grids} \label{subsec:structured-grid-matrices}
+  \section{Sparse Banded Matrices Derived from Structured Grids} \label{sec:structured-grid-matrices}
 
     Structured grid computations are ubiquitously used for physical simulations in scientific fields such as, for
     example, computational fluid dynamics, electrodynamics and astrophysics. Generally, a system of partial differential
