--- a/content/c3sr-intro.tex
+++ b/content/c3sr-intro.tex
@@ -2,7 +2,7 @@
 \pagenumbering{arabic}
 
   This section introduces two notions fundamental to the ideas developed in this report, the general purpose
-  \emph{compressed sparse row} matrix storage format (CSR) and, secondly, \emph{sparse banded matrices} as well as
+  \keyword{compressed sparse row} matrix storage format (CSR) and, secondly, \keyword{sparse banded matrices} as well as
   their usage in the natural sciences and their particular structure.
 
   \section{Compressed Sparse Row Matrix Storage Format}
@@ -105,7 +105,7 @@
             \centering
             \includegraphics[width=0.9\textwidth]{fig/laplacian_example.png} % second figure itself
         \end{minipage}
-        \caption[Structured grid and corresponding matrix for a simple Laplacian.]{\textbf{Structured grid and corresponding matrix for a simple Laplacian} $\nabla^2 u(\vec{r}) = 0$. The Laplace-operator is approximated by the conventional 3-axial symmetric discretization scheme, equivalent to a symmetric 7-point stencil operation.}
+        \caption[Structured grid and corresponding matrix for a simple Laplacian.]{\textbf{\bm{$5\times 5\times 5$} Structured grid and corresponding matrix for a simple Laplacian} $\nabla^2 u(\vec{r}) = 0$. The Laplace-operator is approximated by the conventional 3-axial symmetric discretization scheme, equivalent to a symmetric 7-point stencil operation.}
         \label{fig:laplacian-example}
     \end{figure}
 
