--- a/content/commands.tex
+++ b/content/commands.tex
@@ -32,3 +32,6 @@
   {\DataMember{RP}[#1]}
 \NewDocumentCommand{\CI}{o}
   {\DataMember{CI}[#1]}
+
+
+\NewDocumentCommand\keyword{m}{\textbf{\emph{#1}}}
