--- a/content/matrixgen-modules.tex
+++ b/content/matrixgen-modules.tex
@@ -8,7 +8,7 @@
     \texttt{matrixgen::adjmat} aims to provide a simple interface to create such matrices directly without the
     attachment to a specific physical problem.
 
-    The interface comprises three parameters which characterize the matrix: The \emph{grid dimensions} define the extent
+    The interface comprises three parameters which characterize the matrix: The \keyword{grid dimensions} define the extent
     of the grid as the number of nodes in the $x$, $y$ and $z$ directions. 2-dimensional grids may be imitated by
     setting the $z$-dimension to $1$. As with all other modules, the matrix object type is specified as template
     parameter. asd
