--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -87,7 +87,7 @@ Physik und Astronomie}} \title{Student Research Project Report} \date{} \begin{d
 \newpage
 \listoffigures
 
-\part{3-fold Compressed Sparse Row Matrix Storage Format}
+\part{3-Fold Compressed Sparse Row Matrix Storage Format}
 
   \include{content/c3sr-intro}
   \include{content/c3sr-c3sr}
