--- a/content/c3sr-outlook.tex
+++ b/content/c3sr-outlook.tex
@@ -1,3 +1,5 @@
 \chapter{Outlook}
 
 Scan of row-sizes for load-balancing mvm.
+
+Further shrink COMP by including it indirectly into JS. COMP analysis is much faster on the RLI-enc'd arrays.
